Added a couple per pop scripted modifiers, moved some logic from pop categories to traits, added a quick inline for pop_categories for per_pop modifier handling

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3716,9 +3716,19 @@ mod_tec_assembly_prohibited_no_cyborg_short: ""
 mod_tec_assembly_prohibited_no_hive: "§RNo $tec_loc_biological_assembly$ provided as assembling species is not Hive Minded§!"
 mod_tec_assembly_prohibited_no_hive_short: ""
 
+# Per pop
+mod_tec_planet_building_build_speed_mult_per_pop : "
+$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop
+"
+mod_tec_planet_psionic_jobs_produces_mult_per_pop : "
+$mod_planet_psionic_jobs_produces_mult$ per Pop
+"
+mod_tec_planet_jobs_produces_mult_per_pop : "
+$mod_planet_jobs_produces_mult$ per Pop
+"
 # Self-assembly
-mod_tec_pop_self_assembly_organic_add: "Monthly Organic Pop Assembly From Pop"
-mod_tec_pop_self_assembly_add: "Monthly Mechanical Pop Assembly From Pop"
+mod_tec_planet_pop_assembly_organic_add_per_pop: "Monthly Organic Pop Assembly per Pop"
+mod_tec_planet_pop_assembly_add_per_pop: "Monthly Mechanical Pop Assembly per Pop"
 
 # Pop Upkeeps
 
