--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -689,7 +689,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_cybernetic_submodule_warfare:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
  trait_tec_cybernetic_submodule_survival:0 "Army Health: §G+20%§!\n"
  trait_tec_cybernetic_submodule_recycling:0 "$mod_planet_pops_upkeep_mult$: §G-10%§!\n"
- trait_tec_cybernetic_submodule_construction:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+1%§!\n"
+ trait_tec_cybernetic_submodule_construction:0 "$mod_tec_planet_building_build_speed_mult_per_pop $: §G+1%§!\n"
  trait_tec_cybernetic_submodule_knowledge:0 "$MOD_LEADER_SPECIES_EXP_GAIN$: §G+25%§!\n"
 
  trait_tec_cybernetic_leader_fallback:0 "\n§GLeaders from this species have additional traits and bonuses§!"
@@ -816,8 +816,8 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_replicant_brain:0 "Neural hybridation"
  trait_tec_replicant_brain_desc:0 "§LNanoprocessors and nano memory storages complement natural neural activities, creating a network of cooperative cognitive and intellectual interchanges, greatly enhancing this species intellect and creativity.§!"
  mod_trait_tec_replicant_brain_tooltip:0 "[trait_tec_replicant_brain_block]"
- trait_tec_replicant_brain_effect_standard:0 "£trigger_tec_research£ Research from £job£ Jobs: §G+20%§!\n£unity£ Unity from £job£ Jobs: §G+20%§!"
- trait_tec_replicant_brain_effect_upgraded:0 "§EUpgraded Trait§!\n£trigger_tec_research£ Research from £job_researcher£ [GetResearcherPlural]: §G+1§!\n£unity£ Unity from [GetAdministratorPluralWithIcon]: §G+1§!"
+ trait_tec_replicant_brain_effect_standard:0 "$mod_planet_jobs_all_research_produces_mult$: §G+20%§!\n$mod_planet_jobs_unity_produces_mult$: §G+20%§!"
+ trait_tec_replicant_brain_effect_upgraded:0 "§EUpgraded Trait§!\n$mod_planet_jobs_all_research_produces_add$: §G+1§!\n£unity£ Unity from [GetAdministratorPluralWithIcon]: §G+1§!"
 
  trait_tec_replicant_body:0 "Augmented Physique"
  trait_tec_replicant_body_desc:0 "§LA perfect bodily composition, paired with a really efficient metabolism and a impervious health and efficient usage and recyclement of resources makes this species have a close to perfect body.§!"
@@ -835,8 +835,8 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_replicant_universal:0 "Universal Template"
  trait_tec_replicant_universal_desc:0 "§LConstant actuators and a resilient genetic and programming code allows a really effective reproductive rate, either being natural, forced cloning or enhanced development.§!"
  mod_trait_tec_replicant_universal_tooltip:0 "[trait_tec_replicant_universal_block]"
- trait_tec_replicant_universal_effect_standard:0 "Pop growth: §G+20%§!\nPop Assembly Speed: §G+20%§!"
- trait_tec_replicant_universal_effect_upgraded:0 "§EUpgraded Trait§!\nPop Assembly Speed: §G+40%§!"
+ trait_tec_replicant_universal_effect_standard:0 "$tec_loc_pop_growth$: §G+20%§!\n$tec_loc_biological_assembly$: §G+20%§!"
+ trait_tec_replicant_universal_effect_upgraded:0 "§EUpgraded Trait§!\n$tec_loc_biological_assembly$: §G+40%§!"
 
 	# Budding
  trait_tec_replicant_budding:0 "Enhanced Bioprinting"
@@ -849,8 +849,8 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_replicant_capacitor:0 "Nano-Capacitors"
  trait_tec_replicant_capacitor_desc:0 "§LAdapted inside normally hollow micro cavities of the body, this species has a myriad of specifically designed nanites integrated with computing, work and development spaces.§!"
  mod_trait_tec_replicant_capacitor_tooltip:0 "[trait_tec_replicant_capacitor_block]"
- trait_tec_replicant_capacitor_effect_standard:0 "Resources from Jobs: §G+10%§!\nUpkeep from Jobs: §G-10%§!"
- trait_tec_replicant_capacitor_effect_upgraded:0 "§EUpgraded Trait§!\nEach Replicant pop provides §G+0.25%§! job output to the planet\nUpkeep from Jobs: §G-10%§!"
+ trait_tec_replicant_capacitor_effect_standard:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\n$mod_planet_jobs_upkeep_mult$: §G-10%§!"
+ trait_tec_replicant_capacitor_effect_upgraded:0 "§EUpgraded Trait§!\n$tec_planet_jobs_produces_mult_per_pop$: §G+0.25%§!"
 
 	# army damage army health allows replicant armies
  trait_tec_replicant_warfare:0 "Bio-Warform"
