--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -2092,7 +2092,7 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  building_tec_cyberpsionic_extractor_plural:0 "Dimensional Extractors"
  building_tec_cyberpsionic_extractor_desc:0 "This structure, made of exotic and powerful materials, harness residual anomalous energy into refined dust that can be used for state of the art cybernetic and psionic creations."
 
- building_tec_cyberpsionic_extractor_entropy:0 "The current rate of Entropy is: §R[tec_entropy_display]%§!"
+ building_tec_cyberpsionic_extractor_entropy:0 "Total Empire Entropy: §R[tec_entropy_display]%§!\n\nThis £building£ §YBuilding§! has its production increased by §R$mod_tec_entropy$§!\nScaling Effect from Entropy: §G[tec_entropy_scaling]x§!"
  building_tec_cyberpsionic_extractor_danger_0:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §BNon existant§!"
  building_tec_cyberpsionic_extractor_danger_1:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §GLow§!"
  building_tec_cyberpsionic_extractor_danger_2:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §YModerate§!"
@@ -2106,14 +2106,14 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  building_tec_cyberpsionic_transmuter_desc:0 "Advanced installations that refine Zro particles into energy by applying physic principles to anomalous crossdimensional matter"
 
  building_tec_cyberpsionic_transmuter_designation:0 "This £building£ §YBuilding§! adapts its production to the planet £stability£ §YDesignation§!"
- building_tec_cyberpsionic_transmuter_entropy:0 "The current rate of Entropy is: §R[tec_entropy_display]%§!\nThis £building£ §YBuilding§! has its production increased by §R$mod_tec_entropy$§!"
+ building_tec_cyberpsionic_transmuter_entropy:0 "Total Empire Entropy: §R[tec_entropy_display]%§!\n\nThis £building£ §YBuilding§! has its production increased by §R$mod_tec_entropy$§!\nScaling Effect from Entropy: §G[tec_entropy_scaling]x§!"
 
 # Webway
  building_tec_cyberpsionic_gate:0 "Phase-Gate"
  building_tec_cyberpsionic_gate_plural:0 "Phase-Gates"
  building_tec_cyberpsionic_gate_desc:0 "TO DO"
 
- building_tec_cyberpsionic_gate_entropy:0 "The current rate of Entropy is: §R[tec_entropy_display]%§!\nBonuses provided by this £building£ §YBuilding§! scale with §R$mod_tec_entropy$§!"
+ building_tec_cyberpsionic_gate_entropy:0 "Total Empire Entropy: §R[tec_entropy_display]%§!\n\nThis £building£ §YBuilding§! has its production increased by §R$mod_tec_entropy$§!\nScaling Effect from Entropy: §G[tec_entropy_scaling]x§!"
 
 # ---------------------------------------------------------------
 # BRANCH OFFICES
