Fixed some shroud events, gatekeeped cyborg trait on cyber hives and assimilators

--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -470,6 +470,13 @@ personality_hive_kind_desc:0 "Driven by the desire of understanding single-minde
  RT_TEC_CHOSEN:0 "Bearer of the Gift"
  RT_TEC_CHOSEN_F:0 "Bearer of the Gift"
 
+ gov_tec_crusaders_of_purity: "Crusaders of Purity"
+ gov_tec_crusaders_of_purity_desc: "This government is a form of rabidly xenophobic theocracy, consecrated to detect and eradicate any kind of lesser species."
+
+
+ RT_TEC_PURITY:0 "His Purity"
+ RT_TEC_PURITY_F:0 "Her Purity"
+
 # ------------------------------------------------- Machine cults
  gov_tec_mechanist_adeptus:0 "Adeptus Roboticus"
  gov_tec_mechanist_adeptus_desc:0 "This government is based on the principles of a mechanical-faith society, where anything related to machines, industry or innovations is praised and elevated, robotic units and automatons are sacred and the ''Holy Machine soul'' is the main deity"
@@ -556,6 +563,40 @@ personality_hive_kind_desc:0 "Driven by the desire of understanding single-minde
 
  gov_tec_absolute_corp:0 "Absolutist Corporation"
  gov_tec_absolute_corp_desc:0 "This government is a form of imperialist mega-corporation focused on getting the sole benefits from all the possible trades in the galaxy no matter who, what or where needs to be eliminated for achieving that goal."
+
+# MEME
+
+ gov_tec_fanatic_purrifiers:0 "Felinic Purrifiers"
+ gov_tec_fanatic_purrifiers_desc:0 "Twhis gowernment is formed of rabidly purrfect and xenophouwic feline species, consecrated to detect and eradicate any kind of lesser species, extermiaunating them without remiaurse, after being called cute one too many times."
+
+ RT_TEC_MEOWJESTY_PURRIFIER: "His Meowjesty Purrifier"
+ RT_TEC_MEOWJESTY_PURRIFIER_F: "Her Meowjesty Purrifier"
+
+ gov_tec_vulpine_purity_order:0 "Vulpine Purity Order"
+ gov_tec_vulpine_purity_order_desc:0 "Twhis gowernment is formed of rabidly purrfect and xenophouwic vulpine species, consecrated to detect and eradicate any kind of lesser species, after being called cute one too many times."
+
+ RT_TEC_FOXY_PURRIFIER: "Foxy Sovereign"
+ RT_TEC_FOXY_PURRIFIER_F: "Foxy Sovereign"
+
+ gov_tec_gecko_assembly:0 "Gecko Assembly of Insurance"
+ gov_tec_gecko_assembly_desc:0 "This government is formed of rabidly xenophobic geckos, consecrated to detect and eradicate any kind of lesser species; if they do not respond at the queries about their extended ship waranty."
+
+ RT_TEC_GECKO_INSURER: "Prime Insurer"
+ RT_TEC_GECKO_INSURER_F: "Prime Insurer"
+
+ gov_tec_butterfly_blood_court:0 "Butterfly Blood Court"
+ gov_tec_butterfly_blood_court_desc:0 "This government is formed of rabidly xenophobic butterflies, consecrated to detect and eradicate any kind of lesser species, craving the blood of their victims."
+
+ RT_TEC_BUTTERFLY_CRAVER: "High Craver"
+ RT_TEC_BUTTERFLY_CRAVER_F: "High Craver"
+
+ gov_tec_starfish_committee:0 "Starfish Purification Committee"
+ gov_tec_starfish_committee_desc:0 "This government is formed of rabidly xenophobic butterflies, consecrated to detect and eradicate any kind of lesser species, exterminating species with wanton joy on their faces."
+
+ RT_TEC_STARFISH_ARBITER: "His Joyfulness"
+ RT_TEC_STARFISH_ARBITER_F: "Her Joyfulness"
+
+
 
 
 # ---------------------------------------------------------------
