cleanup - renamed machine civics (no icons yet)

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -516,11 +516,7 @@ tec_jump_empty:0 "\n\n"
 
 # ------------------------------------------------- Machine
 	# Cluster drones
- job_tec_prime_drone:0 "Prime Cluster"
- job_tec_prime_drone_plural:0 "Prime Clusters"
- job_tec_prime_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, primarily developed as a balanced way of controlling and amplifying the capacities of minor drones."
- job_tec_prime_drone_effect_desc:0 "£job_tec_prime_drone£ $job_tec_prime_drone_plural$ uses large amounts of £energy£ §YEnergy§! for generating £unity£ §Y$unity$§!, £stability£ §YStability§! and £amenities_no_happiness£ §YAmenities§!"
- mod_job_tec_prime_drone_add:0 "$job_tec_prime_drone$ Jobs"
+# prime drone here
 
  job_tec_alpha_drone:0 "Alpha Cluster"
  job_tec_alpha_drone_plural:0 "Alpha Clusters"
