--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -922,65 +922,65 @@
 # ------------------------------------------------------------
 	# Requires having finished the "Accelerated Augmentation" situation
 	# Requires having finished the "Cybernetic Revolution" situation
- tradition_tec_evolved_cybernetics:0 "Revolution"
- tradition_tec_evolved_cybernetics_desc:0 "to do."
+ tradition_tec_evolved_cybernetics_t2:0 "Revolution"
+ tradition_tec_evolved_cybernetics_t2_desc:0 "to do."
 
- tr_tec_evolved_cybernetics_adopt:0 "$tradition_tec_evolved_cybernetics$"
- tr_tec_evolved_cybernetics_adopt_tooltip:7 "to do - effect\n\nAllows the §YAssimilation§! of Organic pops, cybernetic or not, into §BAdvanced Cyborgs§!."
+ tr_tec_evolved_cybernetics_t2_adopt:0 "$tradition_tec_evolved_cybernetics$"
+ tr_tec_evolved_cybernetics_t2_adopt_tooltip:7 "to do - effect\n\nAllows the §YAssimilation§! of Organic pops, cybernetic or not, into §BAdvanced Cyborgs§!."
 
- tr_tec_evolved_cybernetics_finish:0 "$tradition_tec_evolved_cybernetics$ Traditions Finished"
- tr_tec_evolved_cybernetics_finish_tooltip:4 "to do - "
- tr_tec_evolved_cybernetics_finish_effect:4 ""
+ tr_tec_evolved_cybernetics_t2_finish:0 "$tradition_tec_evolved_cybernetics$ Traditions Finished"
+ tr_tec_evolved_cybernetics_t2_finish_tooltip:4 "to do - "
+ tr_tec_evolved_cybernetics_t2_finish_effect:4 ""
 
- tr_tec_evolved_cybernetics_1:0 ""
- tr_tec_evolved_cybernetics_1_tooltip:0 "TO DO effect"
- tr_tec_evolved_cybernetics_1_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_tec_evolved_cybernetics_t2_1:0 ""
+ tr_tec_evolved_cybernetics_t2_1_tooltip:0 "TO DO effect"
+ tr_tec_evolved_cybernetics_t2_1_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
- tr_tec_evolved_cybernetics_2:0 "Conclusive Blueprints"
- tr_tec_evolved_cybernetics_2_tooltip:0 "TO DO effect"
- tr_tec_evolved_cybernetics_2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_tec_evolved_cybernetics_t2_2:0 "Conclusive Blueprints"
+ tr_tec_evolved_cybernetics_t2_2_tooltip:0 "TO DO effect"
+ tr_tec_evolved_cybernetics_t2_2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
  # Scaling
-	tr_tec_evolved_cybernetics_3:0 "Connective Armor I"
-	tr_tec_evolved_cybernetics_3_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G10%§!.\n\n$tec_tradition_has_tiers$"
-	tr_tec_evolved_cybernetics_3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_t2_3:0 "Connective Armor I"
+	tr_tec_evolved_cybernetics_t2_3_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G10%§!.\n\n$tec_tradition_has_tiers$"
+	tr_tec_evolved_cybernetics_t2_3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_cybernetics_3_t2:0 "Connective Armor II"
-	tr_tec_evolved_cybernetics_3_t2_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G20%§!.\n\n$tec_tradition_has_tiers$"
-	tr_tec_evolved_cybernetics_3_t2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_t2_3_t2:0 "Connective Armor II"
+	tr_tec_evolved_cybernetics_t2_3_t2_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G20%§!.\n\n$tec_tradition_has_tiers$"
+	tr_tec_evolved_cybernetics_t2_3_t2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_cybernetics_3_t3:0 "Connective Armor III"
-	tr_tec_evolved_cybernetics_3_t3_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G50%§!."
-	tr_tec_evolved_cybernetics_3_t3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_t2_3_t3:0 "Connective Armor III"
+	tr_tec_evolved_cybernetics_t2_3_t3_tooltip:0 "§YCybernetic Exoskeletons§! improve the base main effect bonus of §YCybernetic traits§! by an additional §G50%§!."
+	tr_tec_evolved_cybernetics_t2_3_t3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_cybernetics_4:0 "Synergistic Implants I"
-	tr_tec_evolved_cybernetics_4_tooltip:0 "Cybernetic species gain a §G1%§! output per §YCybernetic trait§!.\n\n$tec_tradition_has_tiers$"
-	tr_tec_evolved_cybernetics_4_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_t2_4:0 "Synergistic Implants I"
+	tr_tec_evolved_cybernetics_t2_4_tooltip:0 "Cybernetic species gain a §G1%§! output per §YCybernetic trait§!.\n\n$tec_tradition_has_tiers$"
+	tr_tec_evolved_cybernetics_t2_4_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_cybernetics_4_t2:0 "Synergistic Implants II"
-	tr_tec_evolved_cybernetics_4_t2_tooltip:0 "Cybernetic species gain a §G2%§! output per §YCybernetic trait§!.\n\n$tec_tradition_has_tiers$"
-	tr_tec_evolved_cybernetics_4_t2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_t2_4_t2:0 "Synergistic Implants II"
+	tr_tec_evolved_cybernetics_t2_4_t2_tooltip:0 "Cybernetic species gain a §G2%§! output per §YCybernetic trait§!.\n\n$tec_tradition_has_tiers$"
+	tr_tec_evolved_cybernetics_t2_4_t2_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_cybernetics_4_t3:0 "Synergistic Implants III"
-	tr_tec_evolved_cybernetics_4_t3_tooltip:0 "Cybernetic species gain a §G3%§! output per §YCybernetic trait§!."
-	tr_tec_evolved_cybernetics_4_t3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_t2_4_t3:0 "Synergistic Implants III"
+	tr_tec_evolved_cybernetics_t2_4_t3_tooltip:0 "Cybernetic species gain a §G3%§! output per §YCybernetic trait§!."
+	tr_tec_evolved_cybernetics_t2_4_t3_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
- tr_tec_evolved_cybernetics_5:0 "TO DO name"
- tr_tec_evolved_cybernetics_5_tooltip:0 "TO DO effect"
- tr_tec_evolved_cybernetics_5_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_tec_evolved_cybernetics_t2_5:0 "Built Different"
+ tr_tec_evolved_cybernetics_t2_5_tooltip:0 "Unlocks a second cybernetic main module"
+ tr_tec_evolved_cybernetics_t2_5_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
  # Finishers
-	tr_tec_evolved_cybernetics_6_a:0 "The Flesh is Mine"
-	tr_tec_evolved_cybernetics_6_a_tooltip:0 "TO DO effect - Allows the assimilation of sentient organics into either the main cybernetic species or into new robots, if possible, controlled via policy."
-	tr_tec_evolved_cybernetics_6_a_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_t2_6_a:0 "The Flesh is Mine"
+	tr_tec_evolved_cybernetics_t2_6_a_tooltip:0 "Allows the assimilation of sentient organics into either the main cybernetic species or into new robots, if possible, controlled via policy.\nThis type of assimilation has a high (§R50%§!) risk of failure"
+	tr_tec_evolved_cybernetics_t2_6_a_delayed:0 "We can mold flesh, metal, organ and circuitry as one, no matter the foundation we can determine the result."
 
-	tr_tec_evolved_cybernetics_6_b:0 "TO DO name"
-	tr_tec_evolved_cybernetics_6_b_tooltip:0 "TO DO effect"
-	tr_tec_evolved_cybernetics_6_b_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_t2_6_b:0 "Synthetic Integration"
+	tr_tec_evolved_cybernetics_t2_6_b_tooltip:0 "Unlocks Upgrade centers.\nVia upgrade centers, robotic units can be directly implanted onto cybernetic pops, greatly improving its efficiency and amplifying the effects of cybernetic modules."
+	tr_tec_evolved_cybernetics_t2_6_b_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
-	tr_tec_evolved_cybernetics_6_c:0 "TO DO name"
-	tr_tec_evolved_cybernetics_6_c_tooltip:0 "TO DO effect"
-	tr_tec_evolved_cybernetics_6_c_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+	tr_tec_evolved_cybernetics_t2_6_c:0 "TO DO name"
+	tr_tec_evolved_cybernetics_t2_6_c_tooltip:0 "TO DO effect"
+	tr_tec_evolved_cybernetics_t2_6_c_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
 # Conscious Singularity (B)
 # ------------------------------------------------------------
