reorganized civics + localisation prepatch

--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -354,7 +354,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_quantum_alloys:0 "Quantic Forging"
  civic_tec_quantum_alloys_desc:0 "The use of quantum entanglement techniques during alloy refining processes provides superdense and efficient alloys, hyper-bonded at a sub-atomic level, by applying intense amounts of energy."
- civic_tooltip_tec_quantum_alloys_effects:0 "£job_foundry£ §Y$job_foundry_plural$§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_foundry£ Metallurgist Output from £job_technician£ $job_technician_plural$: §G+1%§!\n\n§HThis production bonus is disabled when a similar alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
+ civic_tooltip_tec_quantum_alloys_effects:0 "£job_foundry£ §Y$job_foundry_plural$§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_foundry£ Metallurgist Output from £job_technician£ $job_technician_plural$: §G+1%§!\n\n§HThis production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
 
  civic_tec_corporate_quantum_alloys:0 "Quantic Alloy-Profiteering"
  civic_tec_corporate_quantum_alloys_desc:0 "$civic_tec_quantum_alloys_desc$"
@@ -362,7 +362,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_hive_quantum_alloys:0 "Quantic Moulding"
  civic_tec_hive_quantum_alloys_desc:0 "$civic_tec_quantum_alloys_desc$"
- civic_tooltip_tec_hive_quantum_alloys_effects:0 "£job_alloy_drone£ §YAlloy Drones§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_foundry£ Alloy Drones Output from £job_technician_drone£ $job_technician_drone_plural$: §G+1%§!\n\n§HThis bonus production bonus is disabled when a civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
+ civic_tooltip_tec_hive_quantum_alloys_effects:0 "£job_alloy_drone£ §YAlloy Drones§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_foundry£ Alloy Drones Output from £job_technician_drone£ $job_technician_drone_plural$: §G+1%§!\n\n§HThis bonus production bonus is disabled when a similar civic alloy-boosting building (such as £building£ Coordinated Fulfillment Center) is present.§!\n"
 
  civic_tec_machine_quantum_alloys:0 "Quantic Meta-Fabrication"
  civic_tec_machine_quantum_alloys_desc:0 "$civic_tec_quantum_alloys_desc$"
@@ -1066,8 +1066,8 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 # Machine Capital Civics
 # ------------------------------------------------------------
  # Performance - Prime
- #civic_tec_machine_prime:0 "Prime Directive"
- #civic_tec_machine_prime_desc:0 "This Machine Empire relies most of the administrative and productive tasks on semi-autonomous planetary drones, carefully designed with the state of the art technologies and with an unmatched programation for serving the empire interests."
+ #civic_tec_machine_prime_directive:0 "Prime Directive"
+ #civic_tec_machine_prime_directive_desc:0 "This Machine Empire relies most of the administrative and productive tasks on semi-autonomous planetary drones, carefully designed with the state of the art technologies and with an unmatched programation for serving the empire interests."
  #civic_tooltip_tec_machine_prime_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§!.\n- $job_tec_prime_drone_effect_desc$\n\n"
 
  # - Alpha directive
@@ -1080,8 +1080,8 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  civic_tec_machine_omega_desc:0 "To do."
  civic_tooltip_tec_machine_omega_effects:0 "a§!\n\n" 
 
- civic_tec_machine_performance:0 "Performance Monitors"
- civic_tec_machine_performance_desc:0 "Originally designed for improving production, this gestalt conciousness has the constant desire and priority on self-improvement and fabrication boosting, making specifically designed drones that manifest, and control it, at a planetary scale."
+ civic_tec_machine_performance_cluster:0 "Performance Monitors"
+ civic_tec_machine_performance_cluster_desc:0 "Originally designed for improving production, this gestalt conciousness has the constant desire and priority on self-improvement and fabrication boosting, making specifically designed drones that manifest, and control it, at a planetary scale."
  civic_tooltip_tec_machine_performance_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_performance_drone£ §Y$job_tec_performance_drone_plural$§!.\n- $job_tec_performance_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
 
  # Research - Hypercluster
