more loc changes - new cyb meds+mchdendrite wip

--- a/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
@@ -155,6 +155,58 @@
  # /
 # /
 
+# ------------------------------------------------- Synthetic T2
+# check https://discord.com/channels/871511987677442151/885287627639619625/1012116011786440704
+ # Nanite assembler - create pops without the need of jobs
+	building_tec_machine_nanite_assembler_effect:0 "This £building£ assemble pops at a fast rate, without the need of assigned jobs"
+
+	building_tec_machine_nanite_assembler_1:0 "Nano-Replication Plant"
+	building_tec_machine_nanite_assembler_1_plural:0 "Nano-Replication Plants"
+	building_tec_machine_nanite_assembler_1_desc:0 "TO DO"
+
+	building_tec_machine_nanite_assembler_2:0 "Nano-Replication Complex"
+	building_tec_machine_nanite_assembler_2_plural:0 "Nano-Replication Complexes"
+	building_tec_machine_nanite_assembler_2_desc:0 "TO DO"
+
+	building_tec_machine_nanite_assembler_3:0 "Nano-Replication Nexus"
+	building_tec_machine_nanite_assembler_3_plural:0 "Nano-Replication Nexus"
+	building_tec_machine_nanite_assembler_3_desc:0 "TO DO"
+ # /
+
+ # Living metal crucible - Converts living metal into job output based on designation
+	building_tec_machine_reinforcement_crucible_effect:0 "This £building£ provide extra job output based on the planet designation and key production buildings"
+
+	building_tec_machine_reinforcement_crucible_1:0 "Reformation Crucible"
+	building_tec_machine_reinforcement_crucible_1_plural:0 "Reformation Crucibles"
+	building_tec_machine_reinforcement_crucible_1_desc:0 "TO DO"
+
+	building_tec_machine_reinforcement_crucible_2:0 "Reformation Nexus"
+	building_tec_machine_reinforcement_crucible_2_plural:0 "Reformation Nexus"
+	building_tec_machine_reinforcement_crucible_2_desc:0 "TO DO"
+ # /
+
+ # Digitalization - Convert pops into permanent data
+
+	building_tec_machine_digitalization_center_1:0 "Sentient Reforge Plant"
+	building_tec_machine_digitalization_center_1_plural:0 "Sentient Reforge Plants"
+	building_tec_machine_digitalization_center_1_desc:0 "TO DO"
+
+	building_tec_machine_digitalization_center_2:0 "Sentient Reforge Plant"
+	building_tec_machine_digitalization_center_2_plural:0 "Sentient Reforge Plants"
+	building_tec_machine_digitalization_center_2_desc:0 "TO DO"
+
+	building_tec_machine_digitalization_center_3:0 "Sentient Reforge Plant"
+	building_tec_machine_digitalization_center_3_plural:0 "Sentient Reforge Plants"
+	building_tec_machine_digitalization_center_3_desc:0 "TO DO"
+
+ # /
+
+ # Living metal crucible - Improves job output and generate living metal
+	
+ # /
+
+# /
+
 # ------------------------------------------------- Traits
  # --------------- Organic
 	trait_tec_lithotrophic:0 "Lithotrophic"
@@ -228,13 +280,13 @@
 	building_tec_robot_control_effect_robots:0 "This £building£ increases £job_roboticist£ Robot pop capacities."
 	building_tec_robot_control_effect_automation:0 "This £building£ increases £building£ Automation capacities."
 
-	building_tec_robot_control_1:0 "Automation Terminal"
+	building_tec_robot_control_1:0 "Automation Bay"
 	building_tec_robot_control_1_desc:0 "A series of interconnected terminals coordinate the development of automated tasks and improves the overall performance of synthetic elements."
 
-	building_tec_robot_control_2:0 "Automation Processor"
+	building_tec_robot_control_2:0 "Automation Terminal"
 	building_tec_robot_control_2_desc:0 "A series of interconnected terminals coordinate the development of automated tasks and improves the overall performance of synthetic elements."
 
-	building_tec_robot_control_2:0 "Automation Complex"
+	building_tec_robot_control_2:0 "Automation Processor"
 	building_tec_robot_control_2_desc:0 "A series of interconnected terminals coordinate the development of automated tasks and improves the overall performance of synthetic elements."
  # /
  # Job
@@ -333,38 +385,46 @@
 
 # ------------------------------------------------- Cybernetic Ascension
  # ------- Clinic Replace (regular)
-	building_tec_cyberhospital_1:0 "Upgrade Center"
-	building_tec_cyberhospital_1_plural:0 "Cybernetic Clinics"
-	building_tec_cyberhospital_1_desc:0 "TO DO"
+	building_tec_cybernetic_hospital_1:0 "Upgrade Terminal"
+	building_tec_cybernetic_hospital_1_plural:0 "Upgrade Terminals"
+	building_tec_cybernetic_hospital_1_desc:0 "TO DO"
 
-	building_tec_cyberhospital_2:0 "Upgrade Center"
-	building_tec_cyberhospital_2_plural:0 "Cybernetic Center"
-	building_tec_cyberhospital_2_desc:0 "TO DO"
+	building_tec_cybernetic_hospital_2:0 "Upgrade Center"
+	building_tec_cybernetic_hospital_2_plural:0 "Upgrade Centers"
+	building_tec_cybernetic_hospital_2_desc:0 "TO DO"
 
-	building_tec_cyberhospital_2:0 "Cybernetic Repository"
-	building_tec_cyberhospital_2_plural:0 "Cybernetic Repository"
-	building_tec_cyberhospital_2_desc:0 "TO DO"
+	building_tec_cybernetic_hospital_3:0 "Upgrade Crucible"
+	building_tec_cybernetic_hospital_3_plural:0 "Upgrade Crucibles"
+	building_tec_cybernetic_hospital_3_desc:0 "TO DO"
 
-	job_tec_ripperdoc:0 "Cyberdoc"
-	job_tec_ripperdoc_plural:0 "Cyberdocs"
-	job_tec_ripperdoc_desc:0 "to do"
-	job_tec_ripperdoc_effect_desc:0 "£job_tec_ripperdoc£ $job_tec_ripperdoc_plural$ produce £unity£ §Y$unity$§!, £amenities£ §YAmenities§! and £mod_edict_cap_add£ §YEdict Funds§!."
-	mod_job_tec_ripperdoc_add:0 "$job_tec_ripperdoc$ Jobs"
-	mod_job_tec_ripperdoc_per_pop:0 "§G+1§! $job_tec_ripperdoc$ Job per $VALUE$ Pops"
-	mod_job_tec_ripperdoc_per_pop_short:0 "\n§G+1§! £mod_job_tec_ripperdoc_add£ per $VALUE$ £pop£"
+	job_tec_cyborg_ripperdoc:0 "Cyberdoc"
+	job_tec_cyborg_ripperdoc_plural:0 "Cyberdocs"
+	job_tec_cyborg_ripperdoc_desc:0 "Cybernetic implants require constant maintenance and care, and such is the task of cyberdocs, also known as ripperdocs; experts in both medical and technical elements, they apply, maintain and care metal and flesh alike, repairing implants, robots or illness."
+	job_tec_cyborg_ripperdoc_effect_desc:0 "£job_tec_cyborg_ripperdoc£ $job_tec_cyborg_ripperdoc_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!, £pop£ §YPop Assembly§! and £mod_planet_jobs_tec_cybernetics_produces_mult£ $mod_planet_jobs_tec_cybernetics_produces_mult$."
+	mod_job_tec_cyborg_ripperdoc_add:0 "$job_tec_cyborg_ripperdoc$ Jobs"
+	mod_job_tec_cyborg_ripperdoc_per_pop:0 "§G+1§! $job_tec_cyborg_ripperdoc$ Job per $VALUE$ Pops"
+	mod_job_tec_cyborg_ripperdoc_per_pop_short:0 "\n§G+1§! £mod_job_tec_cyborg_ripperdoc_add£ per $VALUE$ £pop£"
  # /
 
  # ------- Upgrade Crucibles (Gestalts)
-	building_tec_cyborg_center_effect:0 "This £building£ "
-Processor
-	building_tec_cyborg_center_1:0 "Upgrade Center"
-	building_tec_cyborg_center_1_desc:0 "TO DO"
+	building_tec_cybernetic_hospital_gestalt_effect:0 "This £building£ "
 
-	building_tec_cyborg_center_2:0 "Upgrade Forum"
-	building_tec_cyborg_center_2_desc:0 "TO DO"
+	building_tec_cybernetic_hospital_gestalt_1:0 "Upgrade Terminal"
+	building_tec_cybernetic_hospital_gestalt_1_desc:0 "These outpost server as points of maintenance and enhancement of cybernetic elements of this collective."
 
-	building_tec_cyborg_center_3:0 "Upgrade Crucible"
-	building_tec_cyborg_center_3_desc:0 "TO DO"
+	building_tec_cybernetic_hospital_gestalt_2:0 "Upgrade Center"
+	building_tec_cybernetic_hospital_gestalt_2_desc:0 "These outpost server as points of maintenance and enhancement of cybernetic elements of this collective."
+
+	building_tec_cybernetic_hospital_gestalt_3:0 "Upgrade Crucible"
+	building_tec_cybernetic_hospital_gestalt_3_desc:0 "These outpost server as points of maintenance and enhancement of cybernetic elements of this collective."
+
+	job_tec_cyborg_ripperdoc_drone:0 "Upgrade Drone"
+	job_tec_cyborg_ripperdoc_drone_plural:0 "Upgrade Drones"
+	job_tec_cyborg_ripperdoc_drone_desc:0 "Cybernetic implants require constant maintenance and care, and such is the task of Upgrade Drones; dexterous in both medical and technical elements, they apply, maintain and care metal and flesh alike, repairing implants, robots or illness."
+	job_tec_cyborg_ripperdoc_drone_effect_desc:0 "£job_tec_cyborg_ripperdoc£ $job_tec_cyborg_ripperdoc_drone_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!, £pop£ §YPop Assembly§! and £mod_planet_jobs_tec_cybernetics_produces_mult£ $mod_planet_jobs_tec_cybernetics_produces_mult$."
+	mod_job_tec_cyborg_ripperdoc_drone_add:0 "$job_tec_cyborg_ripperdoc_drone$ Jobs"
+	mod_job_tec_cyborg_ripperdoc_drone_per_pop:0 "§G+1§! $job_tec_cyborg_ripperdoc_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_cyborg_ripperdoc_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cyborg_ripperdoc_add£ per $VALUE$ £pop£"
  # /
 
  # ------- Synchronic Terminal
@@ -380,7 +440,7 @@ Processor
 	job_tec_cyborg_servitor:0 "Cyber-Servitor"
 	job_tec_cyborg_servitor_plural:0 "Cyber-Servitors"
 	job_tec_cyborg_servitor_desc:0 "Cybernetic entities designated to the proper development of the colony and all its sub-projects, specifically assigned to flexible adaptation of tasks based on the required needs."
-	job_tec_cyborg_servitor_effect_desc:0 "£job_tec_cyborg_servitor£ $job_tec_cyborg_servitor_plural$ produce §YResources§! based on the £stability£ §YPlanet designation§! and £building£ §YBoosting Buildings§!."
+	job_tec_cyborg_servitor_effect_desc:0 "£job_tec_cyborg_servitor£ $job_tec_cyborg_servitor_plural$ produce §YResources§! and increase the £job£ §YOutput§! of related jobs based on the £stability£ §YPlanet designation§! and £building£ §YBoosting Buildings§!."
 	mod_job_tec_cyborg_servitor_add:0 "$job_tec_cyborg_servitor$ Jobs"
 	mod_job_tec_cyborg_servitor_per_pop:0 "§G+1§! $job_tec_cyborg_servitor$ Job per $VALUE$ Pops"
 	mod_job_tec_cyborg_servitor_per_pop_short:0 "\n§G+1§! £mod_job_tec_cyborg_servitor_add£ per $VALUE$ £pop£"
@@ -388,7 +448,7 @@ Processor
 	job_tec_cyborg_servitor_drone:0 "Cyber-Servitor Drone"
 	job_tec_cyborg_servitor_drone_plural:0 "Cyber-Servitors Drone"
 	job_tec_cyborg_servitor_drone_desc:0 "$job_tec_cyborg_servitor_desc$"
-	job_tec_cyborg_servitor_drone_effect_desc:0 "£job_tec_cyborg_servitor_drone£ $job_tec_cyborg_servitor_drone_plural$ produce §YResources§! based on the £stability£ §YPlanet designation§! and £building£ §YBoosting Buildings§!."
+	job_tec_cyborg_servitor_drone_effect_desc:0 "£job_tec_cyborg_servitor_drone£ $job_tec_cyborg_servitor_drone_plural$ produce §YResources§! and increase the £job£ §YOutput§! of related jobs based on the £stability£ §YPlanet designation§! and £building£ §YBoosting Buildings§!."
 	mod_job_tec_cyborg_servitor_drone_add:0 "$job_tec_cyborg_servitor_drone$ Jobs"
 	mod_job_tec_cyborg_servitor_drone_per_pop:0 "§G+1§! $job_tec_cyborg_servitor_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_cyborg_servitor_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cyborg_servitor_drone_add£ per $VALUE$ £pop£"
