--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -741,6 +741,25 @@
  # --------------- Buildings
  # /
 
+ # --------------- Jobs
+	job_tec_psychic_augmented:0 "Augmented"
+	job_tec_psychic_augmented_plural:0 "Augmented"
+	job_tec_psychic_augmented_desc:0 "These individuals have reached such a deep level of psychic powers they are able to defy the known, and potentially unknown, limits of reality."
+	job_tec_psychic_augmented_effect_desc:0 "£job_tec_psychic_augmented£ $job_tec_psychic_augmented_plural$ TO DO."
+	mod_job_tec_psychic_augmented_add:0 "$job_tec_psychic_augmented$ Jobs"
+	mod_job_tec_psychic_augmented_per_pop:0 "§G+1§! $job_tec_psychic_augmented$ Job per $VALUE$ Pops"
+	mod_job_tec_psychic_augmented_per_pop_short:0 "\n§G+1§! £mod_job_tec_psychic_augmented_add£ per $VALUE$ £pop£"
+
+	job_tec_psychic_augmented_drone:0 "Augmented Drone"
+	job_tec_psychic_augmented_drone_plural:0 "Augmented Drone"
+	job_tec_psychic_augmented_drone_desc:0 "These drones have been gifted with high part of the collective psychic capacities, developing the capacity of being able to defy the known, and potentially unknown, limits of reality."
+	job_tec_psychic_augmented_drone_effect_desc:0 "£job_tec_psychic_augmented_drone£ $job_tec_psychic_augmented_drone_plural$ TO DO."
+	mod_job_tec_psychic_augmented_drone_add:0 "$job_tec_psychic_augmented_drone$ Jobs"
+	mod_job_tec_psychic_augmented_drone_per_pop:0 "§G+1§! $job_tec_psychic_augmented_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_psychic_augmented_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_psychic_augmented_drone_add£ per $VALUE$ £pop£"
+
+ # /
+
  # --------------- AP 2
 	ap_tec_psychic_t2:0 "Uncontained Psyche"
 	ap_tec_psychic_t2_desc:0 "TO DO."
